# prog2

10_Ora_Onallo_JSON_Megoldas/: 10_Ora_JSON_Onallo.pro  harcos.cpp  ijasz.h  karakterek.json  magus.h  main.cpp  merkozesek.json  szerver.cpp
10_Ora_Onallo_TXT_Megoldas/: 10_Ora_Onallo_TXT.pro  harcos.h  ijasz.cpp  karakter.cpp  karakter.h  karakterek.txt  magus.cpp  main.cpp  merkozesek.txt  szerver.cpp  szerver.h
1_Ora_Kozos/: main.cpp
1_Ora_Onallo/: main.cpp
2/: main_v1.cpp  main_v2.cpp  main_v3.cpp  main_v4.cpp  main_v5.cpp
2_Ora_Kozos/: 2_Ora_Kozos.pro  main.cpp  szamok.cpp  szamok.h
2_Ora_Onallo/: 2_Ora_Onallo.pro  main.cpp  tarolo.cpp  tarolo.h
3_Ora_Kozos/: 3_Ora_Kozos.pro  datum.cpp  datum.h  hallgato.cpp  hallgato.h  main.cpp
3_Ora_Kozos_megoldas/: 3_Ora_Kozos.pro  main.cpp  szemely.cpp  szemely.h
3_Ora_Onallo/: 3_Ora_Onallo.pro  main.cpp  rendezveny.cpp  rendezveny.h  szamsor.cpp  szamsor.h  szemely.cpp
3_hazi/: CMakeLists.txt  main.cpp
4_Ora_Onallo/: datum.cpp  datum.h  datumlista.cpp  datumlista.h  datumok.txt  main.cpp
4_Ora_Onallo-Megoldas/: 4_Ora_Onallo_Megoldas.pro  datum.cpp  datum.h  datumlista.cpp  datumlista.h  main.cpp
5_Ora_Kozos/: 5_Ora_Kozos.pro  5_Ora_Kozos.pro.user.593f6bd  main.cpp  minta-stdout.txt  probalkozas.cpp  probalkozas.h  verseny.cpp  verseny.h  verseny1.txt
6_Ora_Kozos/: 6_Ora_Kozos.pro  (+10 more)
nagyZH_03/: CMakeLists.txt  Minta-NagyZH-3.pro  export-example-A.json  main.cpp  minta-stdout.txt  wallet.h
nagyZH_03/coupons/: MonthlyCoupon.h  MultipleCoupon.h
nagyZH_03/purchase/: PurchaseItem.cpp  quantity.cpp
(+232 files in other folders)
